--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div id="task-manager">
 
-    <h1>Task Manager</h1>
+    <h1>Task Manager 💗</h1>
 
     <form id="task-form">
       <input type="text" id="task-input" placeholder="Enter a new task" required>
