--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <ul id="task-list">
       <li>
-        <p>Task Content</p>
+        <p id="task-harcodeada">Task Content</p>
         <button class="delete-btn">Delete</button>
         <button class="edit-btn">Edit</button>
       </li>
